[tool.poetry]
name = "account"
version = "0.1.0"
description = ""
authors = ["zlatan1487 <vitalik.karpukhin@list.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.2.2"

[tool.poetry.scripts]
start-tests = 'account.main:up_first'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
